# my-portfolio

./: .gitignore  .prettierignore  README.md  ecosystem.config.js  next.config.ts  package-lock.json  package.json
.github/workflows/: debug-deploy.yml  deploy.yml
Particle/: index.html  particle.js  style.css
app/: globals.css  layout.tsx  page.tsx
app/api/contact/: route.ts
app/components/: About.tsx  Contact.tsx  Footer.tsx  Header.tsx  Hero.tsx  Projects.tsx  Skills.tsx
app/lib/: assetPath.ts
app/projects/: projectDetail.tsx  projectsData.ts
app/projects/611-game/: page.tsx
app/projects/bachelor-thesis-report/: page.tsx
app/projects/bullet-hell/: page.tsx
app/projects/freee-internship/: page.tsx
app/projects/master-thesis-report/: page.tsx
app/projects/payview/: page.tsx
app/projects/tanqle-project/: page.tsx
app/projects/tap-internship/: page.tsx
app/projects/torisan-game/: page.tsx
app/projects/wasm-rust-suika-game/: page.tsx
public/: index.html  manifest.json
src/: App.css  App.js  index.css
src/components/: Contact.js  Footer.js  Header.js  Hero.js  Layout.jsx  Profile.js  ProfileDetail.js  Skills.js  Works.js
src/pages/: Bachelor_sThesis_Report.js  Game611.js  OtherWorks.js  PayView.js  Portfolio.js  Torisan_game.js
src/styles/: App.css  globalStyles.js
wasm-rust-suika-game/: Cargo.toml  README.md
wasm-rust-suika-game/src/: lib.rs
