[package]
name = "wasm-rust-suika-game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = { version = "0.4", optional = true }

[features]
default = ["console"]
console = []

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
